--- a/matter/one/index.html
+++ b/matter/one/index.html
@@ -10,6 +10,10 @@
     <h1>
       Hello Physics World!
     </h1>
+    <button onclick="start()">
+      Start!
+    </button>
+    <canvas id="canvas" width="800" height="600"></canvas>
     <script src="./script_1.js"></script>
   </body>
 </html>
