--- a/matter/one/index.html
+++ b/matter/one/index.html
@@ -7,10 +7,12 @@
     <script src="../matter.js"></script>
   </head>
   <body>
-    <h1>
+    <a onclick="start()">
+      <h1>
       Hello Physics World!
-    </h1>
-    <button onclick="start()">
+      </h1>
+    </a>
+    <button onclick="start()" style="">
       Start!
     </button>
     <canvas id="canvas" width="800" height="600"></canvas>
