--- a/matter/one/index.html
+++ b/matter/one/index.html
@@ -7,14 +7,11 @@
     <script src="../matter.js"></script>
   </head>
   <body>
-    <a onclick="start()">
+    <a href="./" onclick="start()">
       <h1>
       Hello Physics World!
       </h1>
     </a>
-    <button onclick="start()" style="">
-      Start!
-    </button>
     <canvas id="canvas" width="800" height="600"></canvas>
     <script src="./script_1.js"></script>
   </body>
