--- a/3d/index.html
+++ b/3d/index.html
@@ -20,7 +20,7 @@
       
       // add the cube
       const geometry = new THREE.BoxGeometry();
-      const material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
+      const material = new THREE.MeshBasicMaterial( { color: 0xff0000 } );
       const cube = new THREE.Mesh( geometry, material );
       scene.add( cube );
 
