--- a/matter/one/index.html
+++ b/matter/one/index.html
@@ -7,7 +7,7 @@
     <script src="../matter.js"></script>
   </head>
   <body>
-    <a href="./" onclick="start()">
+    <a href="" onclick="start()">
       <h1>
       Hello Physics World!
       </h1>
