--- a/matter/one/index.html
+++ b/matter/one/index.html
@@ -7,11 +7,11 @@
     <script src="../matter.js"></script>
   </head>
   <body>
-    <a href="" onclick="start()">
       <h1>
-      Hello Physics World!
+        <button onclick="start()">
+          Hello Physics World!
+        </button>
       </h1>
-    </a>
     <canvas id="canvas" width="800" height="600"></canvas>
     <script src="./script_1.js"></script>
   </body>
