--- a/matter/one/index.html
+++ b/matter/one/index.html
@@ -9,7 +9,7 @@
   <body>
       <h1>
         <button onclick="start()">
-          Hello Physics World!
+          Start Simulation
         </button>
       </h1>
     <canvas id="canvas" width="800" height="600"></canvas>
