--- a/matter/one/index.html
+++ b/matter/one/index.html
@@ -6,13 +6,8 @@
     </title>
     <script src="../matter.js"></script>
   </head>
-  <body>
-      <h1>
-        <button onclick="start()">
-          Start Simulation
-        </button>
-      </h1>
-    <canvas id="canvas" width="800" height="600"></canvas>
+  <body
+    <canvas id="canvas" width="1600" height="1200"></canvas>
     <script src="./script_1.js"></script>
   </body>
 </html>
