--- a/matter/one/index.html
+++ b/matter/one/index.html
@@ -6,8 +6,8 @@
     </title>
     <script src="../matter.js"></script>
   </head>
-  <body
-    <canvas id="canvas" width="1600" height="1200"></canvas>
+  <body>
+    <canvas id="canvas"></canvas>
     <script src="./script_1.js"></script>
   </body>
 </html>
