--- a/matter/one/index.html
+++ b/matter/one/index.html
@@ -4,6 +4,9 @@
     <title>
       Physics Test 1
     </title>
+    <style>
+      body { margin: 0; }
+    </style>
     <script src="../matter.js"></script>
   </head>
   <body>
