--- a/matter/one/index.html
+++ b/matter/one/index.html
@@ -6,6 +6,7 @@
     </title>
     <style>
       body { margin: 0; }
+      canvas { margin: 0; padding: 0; }
     </style>
     <script src="../matter.js"></script>
   </head>
