--- a/matter/one/index.html
+++ b/matter/one/index.html
@@ -11,7 +11,7 @@
     <script src="../matter.js"></script>
   </head>
   <body>
-    <canvas id="canvas" width="10000" height="10000"></canvas>
+    <canvas id="canvas" width="10000" height="10000" style="display: block;"></canvas>
     <script src="./script_1.js"></script>
   </body>
 </html>
