--- a/matter/one/index.html
+++ b/matter/one/index.html
@@ -5,7 +5,7 @@
       Physics Test 1
     </title>
     <style>
-      body { margin: 0; }
+      body { margin: 0; overflow: hidden; }
       canvas { margin: 0; padding: 0; }
     </style>
     <script src="../matter.js"></script>
