--- a/matter/two/index.html
+++ b/matter/two/index.html
@@ -8,6 +8,7 @@
       body { margin: 0; overflow: hidden; }
     </style>
     <script src="../matter.js"></script>
+    <script src="https://nicephysics.github.io/test/color/chroma.js"></script>
   </head>
   <body>
     <canvas id="canvas" width="10000" height="10000" style="display: block;"></canvas>
